--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
-    "mongoose": "4.4.10",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.9.27",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "1.7.0",
     "passport": "0.3.2",
